--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,77 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:padding="16dp"
-    tools:viewBindingIgnore="false">
+    android:layout_height="match_parent">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:context=".MainActivity"
+        android:padding="16dp"
+        tools:viewBindingIgnore="false">
 
-    <EditText
-        android:id="@+id/cost_of_service"
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
-        android:inputType="numberDecimal"
-        android:hint="@string/cost_of_service"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-    <TextView
-        android:id="@+id/service_question"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/cost_of_service"
-        app:layout_constraintStart_toStartOf="parent"
-        android:text="@string/how_was_the_service"/>
-    <RadioGroup
-        android:id="@+id/tip_options"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/service_question"
-        app:layout_constraintStart_toStartOf="parent"
-        android:orientation="vertical"
-        android:checkedButton="@id/option_twenty_percent">
-        <RadioButton
-            android:id="@+id/option_twenty_percent"
-            android:layout_width = "wrap_content"
-            android:layout_height = "wrap_content"
-            android:text="@string/amazing"/>
-        <RadioButton
-            android:id="@+id/option_eighteen_percent"
-            android:layout_width = "wrap_content"
-            android:layout_height = "wrap_content"
-            android:text="@string/good"/>
-        <RadioButton
-            android:id="@+id/option_fifteen_percent"
-            android:layout_width = "wrap_content"
-            android:layout_height = "wrap_content"
-            android:text="@string/okay"/>
+        <ImageView
+            android:id="@+id/icon_cost_of_service"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_store"
+            android:importantForAccessibility="no"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/cost_of_service"
+            app:layout_constraintBottom_toBottomOf="@+id/cost_of_service"/>
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/cost_of_service"
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:hint="@string/cost_of_service"
+            android:layout_marginStart="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="@id/icon_cost_of_service">
 
-    </RadioGroup>
-    <Switch
-        android:id="@+id/round_up_switch"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/round_up_tip"
-        android:checked="true"
-        app:layout_constraintStart_toStartOf="@id/tip_options"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tip_options"
-        tools:ignore="UseSwitchCompatOrMaterialXml" />
-    <Button
-        android:id="@+id/calculate_button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/calculate"
-        app:layout_constraintTop_toBottomOf="@id/round_up_switch"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-    <TextView
-        android:id="@+id/tip_result"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/tip_amount"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/calculate_button"
-        tools:text="Tip Amount: ₹20"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/cost_of_service_edit_text"
+                android:inputType="numberDecimal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <ImageView
+            android:id="@+id/icon_service_question"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_service"
+            android:importantForAccessibility="no"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/service_question"
+            app:layout_constraintTop_toTopOf="@+id/service_question"/>
+        <TextView
+            style="@style/Widget.TipCalculator.TextView"
+            android:id="@+id/service_question"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            app:layout_constraintStart_toStartOf="@+id/cost_of_service"
+            app:layout_constraintTop_toBottomOf="@+id/cost_of_service"
+            android:text="@string/how_was_the_service"/>
+        <RadioGroup
+            android:id="@+id/tip_options"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/service_question"
+            app:layout_constraintStart_toStartOf="@+id/service_question"
+            android:orientation="vertical"
+            android:checkedButton="@id/option_twenty_percent">
+            <RadioButton
+                android:id="@+id/option_twenty_percent"
+                android:layout_width = "wrap_content"
+                android:layout_height = "wrap_content"
+                android:text="@string/amazing"/>
+            <RadioButton
+                android:id="@+id/option_eighteen_percent"
+                android:layout_width = "wrap_content"
+                android:layout_height = "wrap_content"
+                android:text="@string/good"/>
+            <RadioButton
+                android:id="@+id/option_fifteen_percent"
+                android:layout_width = "wrap_content"
+                android:layout_height = "wrap_content"
+                android:text="@string/okay"/>
+
+        </RadioGroup>
+        <ImageView
+            android:id="@+id/icon_round_up_switch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_round_up"
+            android:importantForAccessibility="no"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/round_up_switch"
+            app:layout_constraintTop_toTopOf="@+id/round_up_switch" />
+        <com.google.android.material.switchmaterial.SwitchMaterial
+            android:id="@+id/round_up_switch"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/round_up_tip"
+            android:checked="true"
+            android:layout_marginStart="16dp"
+            app:layout_constraintStart_toEndOf="@+id/icon_round_up_switch"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tip_options"/>
+        <Button
+            android:id="@+id/calculate_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/calculate"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/round_up_switch"
+            app:layout_constraintStart_toStartOf="@+id/round_up_switch"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+        <TextView
+            style="@style/Widget.TipCalculator.TextView"
+            android:id="@+id/tip_result"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tip_amount"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/calculate_button"
+            tools:text="Tip Amount: ₹20"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
